src/apigateways/envoy/envoy.yaml
static_resources:
    listeners:
        - name: listener_0
          address:
              socket_address:
                  address: 0.0.0.0
                  port_value: 80
          filter_chains:
              - filters:
                    - name: envoy.filters.network.http_connection_manager
                      typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                          stat_prefix: ingress_http
                          generate_request_id: true
                          http_filters:
                              - name: envoy.filters.http.router
                          route_config:
                              name: dapr_routes
                              virtual_hosts:
                                  - name: dapr_backend
                                    domains: ["*"]
                                    cors:
                                        allow_origin_string_match:
                                            - safe_regex:
                                                  google_re2: {}
                                                  regex: \*
                                        allow_methods: "GET, POST, PUT, DELETE"
                                        allow_headers: "authorization, content-type, x-requestid, x-requested-with"
                                        allow_credentials: true
                                    routes:
                                        - name: "fitdecoder"
                                          match:
                                              prefix: "/d/"
                                          route:
                                              prefix_rewrite: "/v1.0/invoke/mover-fitdecoder/method/"
                                              cluster: dapr
                                        - name: "uploader"
                                          match:
                                              prefix: "/u/"
                                          route:
                                              prefix_rewrite: "/v1.0/invoke/mover-uploader/method/"
                                              cluster: dapr
                                        - name: "stats"
                                          match:
                                              prefix: "/s/"
                                          route:
                                              prefix_rewrite: "/v1.0/invoke/mover-stats/method/"
                                              cluster: dapr
    clusters:
        - name: dapr
          connect_timeout: 0.25s
          type: STRICT_DNS
          load_assignment:
              cluster_name: dapr
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: 127.0.0.1
                                      port_value: 3500
